--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -18,13 +18,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="star_wars_battlefront_2_2005_art_1536.0" translatesAutoresizingMaskIntoConstraints="NO" id="ppq-cL-co6">
-                                <rect key="frame" x="0.0" y="-8" width="375" height="675"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star_wars_battlefront_2_2005_art_1536.0" translatesAutoresizingMaskIntoConstraints="NO" id="ppq-cL-co6">
+                                <rect key="frame" x="0.0" y="-431" width="375" height="1098"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2OB-XW-Pd1">
+                                <rect key="frame" x="141" y="73" width="102" height="107"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="107" id="Amt-UW-lnm"/>
+                                    <constraint firstAttribute="width" constant="102" id="r3J-rn-yeF"/>
+                                </constraints>
+                                <state key="normal" image="Group"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zt0-TJ-hlh">
+                                <rect key="frame" x="141" y="175" width="102" height="107"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="GroupPeople"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="2OB-XW-Pd1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="9" id="Jah-0O-lRZ"/>
+                            <constraint firstItem="ppq-cL-co6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="TJM-lJ-Txh"/>
+                            <constraint firstItem="2OB-XW-Pd1" firstAttribute="centerX" secondItem="ppq-cL-co6" secondAttribute="centerX" constant="4.5" id="rmb-l5-vKG"/>
+                            <constraint firstItem="ppq-cL-co6" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="umM-Db-fZ0"/>
+                            <constraint firstItem="2OB-XW-Pd1" firstAttribute="centerY" secondItem="ppq-cL-co6" secondAttribute="centerY" constant="8.5" id="v6Z-Ho-xDl"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Star Wars Categories " id="Gh5-67-n2G"/>
@@ -53,6 +72,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Group" width="100" height="98"/>
+        <image name="GroupPeople" width="100" height="98"/>
         <image name="star_wars_battlefront_2_2005_art_1536.0" width="375" height="667"/>
     </resources>
 </document>
