added button images

--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -30,9 +30,12 @@
                                 </constraints>
                                 <state key="normal" image="Group"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zt0-TJ-hlh">
-                                <rect key="frame" x="141" y="175" width="102" height="107"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zt0-TJ-hlh">
+                                <rect key="frame" x="141" y="171" width="102" height="107"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="102" id="f2d-QI-agg"/>
+                                    <constraint firstAttribute="height" constant="107" id="vI2-r1-9nf"/>
+                                </constraints>
                                 <state key="normal" image="GroupPeople"/>
                             </button>
                         </subviews>
@@ -40,6 +43,8 @@
                         <constraints>
                             <constraint firstItem="2OB-XW-Pd1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="9" id="Jah-0O-lRZ"/>
                             <constraint firstItem="ppq-cL-co6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="TJM-lJ-Txh"/>
+                            <constraint firstItem="zt0-TJ-hlh" firstAttribute="centerX" secondItem="ppq-cL-co6" secondAttribute="centerX" constant="4.5" id="kFo-IM-Rho"/>
+                            <constraint firstItem="zt0-TJ-hlh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="107" id="mfs-qy-t2j"/>
                             <constraint firstItem="2OB-XW-Pd1" firstAttribute="centerX" secondItem="ppq-cL-co6" secondAttribute="centerX" constant="4.5" id="rmb-l5-vKG"/>
                             <constraint firstItem="ppq-cL-co6" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="umM-Db-fZ0"/>
                             <constraint firstItem="2OB-XW-Pd1" firstAttribute="centerY" secondItem="ppq-cL-co6" secondAttribute="centerY" constant="8.5" id="v6Z-Ho-xDl"/>
