--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -38,9 +38,19 @@
                                 </constraints>
                                 <state key="normal" image="GroupPeople"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LyB-xH-zm1">
+                                <rect key="frame" x="141" y="269" width="102" height="107"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="107" id="09M-YI-2fd"/>
+                                    <constraint firstAttribute="width" constant="102" id="2SX-js-8cW"/>
+                                </constraints>
+                                <state key="normal" image="GroupStarship"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="LyB-xH-zm1" firstAttribute="centerX" secondItem="ppq-cL-co6" secondAttribute="centerX" constant="4.5" id="8Rv-nz-i9X"/>
+                            <constraint firstItem="LyB-xH-zm1" firstAttribute="top" secondItem="2OB-XW-Pd1" secondAttribute="bottom" constant="89" id="HQC-9z-Wz4"/>
                             <constraint firstItem="2OB-XW-Pd1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="9" id="Jah-0O-lRZ"/>
                             <constraint firstItem="ppq-cL-co6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="TJM-lJ-Txh"/>
                             <constraint firstItem="zt0-TJ-hlh" firstAttribute="centerX" secondItem="ppq-cL-co6" secondAttribute="centerX" constant="4.5" id="kFo-IM-Rho"/>
@@ -79,6 +89,7 @@
     <resources>
         <image name="Group" width="100" height="98"/>
         <image name="GroupPeople" width="100" height="98"/>
+        <image name="GroupStarship" width="100" height="98"/>
         <image name="star_wars_battlefront_2_2005_art_1536.0" width="375" height="667"/>
     </resources>
 </document>
