--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -115,10 +115,10 @@
             </objects>
             <point key="canvasLocation" x="476" y="133.5832083958021"/>
         </scene>
-        <!--Star Wars Vehicle Table View Controller-->
+        <!--Vehicles-->
         <scene sceneID="lGh-VQ-FIU">
             <objects>
-                <tableViewController id="z6N-Am-LSm" customClass="StarWarsVehicleTableViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Vehicles" id="z6N-Am-LSm" customClass="StarWarsVehicleTableViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="wYm-eQ-REZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -143,10 +143,10 @@
             </objects>
             <point key="canvasLocation" x="1233" y="-99"/>
         </scene>
-        <!--Star Wars Starship Table View Controller-->
+        <!--Starships-->
         <scene sceneID="xh3-go-xan">
             <objects>
-                <tableViewController id="WXA-v4-37r" customClass="StarWarsStarshipTableViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Starships" id="WXA-v4-37r" customClass="StarWarsStarshipTableViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="QY5-Hb-nkf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -171,10 +171,10 @@
             </objects>
             <point key="canvasLocation" x="-25" y="878"/>
         </scene>
-        <!--Star Wars Film Table View Controller-->
+        <!--Films-->
         <scene sceneID="ZuV-QD-1GM">
             <objects>
-                <tableViewController id="ZtG-6E-OXh" customClass="StarWarsFilmTableViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Films" id="ZtG-6E-OXh" customClass="StarWarsFilmTableViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Zlq-Ue-can">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -199,10 +199,10 @@
             </objects>
             <point key="canvasLocation" x="705" y="884"/>
         </scene>
-        <!--Star Wars People Table View Controller-->
+        <!--People-->
         <scene sceneID="2qn-ju-BLO">
             <objects>
-                <tableViewController id="d1g-Pb-OTU" customClass="StarWarsPeopleTableViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="People" id="d1g-Pb-OTU" customClass="StarWarsPeopleTableViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="QAJ-nn-ZAv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -227,10 +227,10 @@
             </objects>
             <point key="canvasLocation" x="1457" y="566"/>
         </scene>
-        <!--Star Wars Specie Table View Controller-->
+        <!--Species-->
         <scene sceneID="7lt-JI-Hh2">
             <objects>
-                <tableViewController id="X0H-bb-G65" customClass="StarWarsSpecieTableViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Species" id="X0H-bb-G65" customClass="StarWarsSpecieTableViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="lNC-MS-4UX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -255,10 +255,10 @@
             </objects>
             <point key="canvasLocation" x="-658" y="884"/>
         </scene>
-        <!--Star Wars Planet Table View Controller-->
+        <!--Planets-->
         <scene sceneID="KEA-f9-Doz">
             <objects>
-                <tableViewController id="sLD-FX-Wjd" customClass="StarWarsPlanetTableViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Planets" id="sLD-FX-Wjd" customClass="StarWarsPlanetTableViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Zqe-22-hwf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
